--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <title>Vishal D. Patil</title>
     <meta charset="utf-8">
-    <!--<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> !-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> 
 
-	<!--<meta name="viewport" content="width=device-width, initial-scale=1">!-->
-    <meta name="viewport" content="width=1024, initial-scale=1">
+	<!--<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=yes">!-->
+
 
     
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
@@ -1076,13 +1076,14 @@ h2 span {
                 <div class="row">
                     <!-- First Education Item -->
                     <div class="col-md-6">
-                        <div class="resume-wrap ftco-animate" style="transition: box-shadow 0.3s;border-radius: 20px;">
+                        <a href="https://www.rcpimrd.ac.in/" target="_blank" class="resume-wrap ftco-animate" style="transition: box-shadow 0.3s; border-radius: 20px; text-decoration: none; color: inherit;">
                             <span class="date">2022 - 2024</span>
                             <h2>Master of Computer Application</h2>
                             <span class="position">R.C. Patel Edu Trusts Institute of Management Research <br> and Development</span>
                             <p class="mt-4">Shirpur</p>
-                        </div>
+                        </a>
                     </div>
+                    
                     <!-- Second Education Item -->
                     <div class="col-md-6">
                         <div class="resume-wrap ftco-animate" style="transition: box-shadow 0.3s;border-radius: 20px;">
